<resources>
    <string name="app_name">WakeUpScreen</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="ok">OK</string>
    <string name="language">Language</string>
    <string name="language_zh_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="clear_all">Clear</string>
    <string name="save">Save</string>
    <string name="mail_title">[Question] [Wake Up Screen] write title here</string>


    <!--action-->
    <string name="click_to_close">Click to close</string>
    <string name="click_to_open">Click to open</string>
    <string name="to_setting">To setting</string>
    <string name="how_to_set">How to set</string>ß
    <string name="already_open">Already open</string>
    <string name="already_close">Already close</string>
    <string name="i_already_close">Already close</string>
    <string name="not_open">not open</string>
    <string name="not_close">not close</string>
    <string name="wanna_close">I want to close</string>
    <string name="wanna_open">I want to open</string>
    <string name="set_up_successfully">Set up successfully!</string>

    <!--other-->
    <string name="battery_saver_tips">Turn off the power optimization of this app to ensure that the notification bright
        screen is valid before the phone is restarted.\nTake the Samsung mobile phone as an example. The shutdown method
        is as follows:\n1. Open settings\n2. Search \"Optimize battery usage\"\n3.
        Click to enter \"Optimize battery usage\"\n4. Search for \"Notification Bright Screen\"\n5. Set the button to
        \"unchecked\"\n\nNote: Please turn off [Disable Screen Reminder] for Samsung mobile phone or set it to \"Click
        to display\"
    </string>
    <string name="tip_desc_time_cost">Turning notification on or off will take 1~10 seconds to take effect.\n Please
        wait patiently.
    </string>
    <string name="developing">Developing</string>
    <string name="permission_of_read_notification">Read notification permission</string>
    <string name="service_of_background">Background Services</string>
    <string name="time_of_wake_up_screen">Bright screen time</string>
    <string name="optimize_of_battery_saver">Turn off power optimization</string>
    <string name="pocket_mode">Pocket Mode</string>
    <string name="ongoing_status">Optimize Ongoing Notify</string>
    <string name="current_mode">Current Mode</string>
    <string name="all_pass">All Notify</string>
    <string name="white_list">Whitelist mode</string>
    <string name="white_list_page">Whitelist Setting Page</string>
    <string name="black_list">Blacklist mode</string>
    <string name="black_list_page">Blacklist Setting Page</string>
    <string name="project_address">Open Source Project</string>
    <string name="feedback">Feedback</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="debug_mode_entry">Debug Page</string>
    <string name="click_to_enter_debug_page">Click here to enter Debug Page</string>
    <string name="click_to_enter_white_list_page">Click here to enter Whitelist Page</string>
    <string name="click_to_enter_black_list_page">Click here to enter Blacklist Page</string>
    <string name="debug_page_hints">When debugging mode is opened\nthe page will display the name of the APP package
        corresponding to all notifications received. \nIf an unexpected situation occurs \nsuch as an abnormal light on
        the screen\nplease take a screenshot of the page and contact the author to solve it\n
    </string>
    <string name="white_list_hints">The screen will only wake up when it receives a notification from selected
        apps.
    </string>
    <string name="black_list_hints">The screen will not wake up when it receives a nofification from selected apps</string>


    <string name="custom">Custom</string>
    <string name="about">About</string>
    <string name="debug">Debug</string>
    <string name="advanced_setting">Advanced Setting</string>
    <string name="about_this_app">About Wake Up Screen</string>
    <string name="app_info">App Info</string>
    <string name="info">Info</string>
    <string name="app_introduce">App Intro</string>
    <string name="give_star">Five-star rate</string>
    <string name="click_here_to_open_google_play_store">Click here to open Google Play Store</string>

    <string name="app_intro_full">This is an Android app that allows the phone to wake up when it receives a notification.\nSpecially for Samsung S10 optimization. Also compatible with other devices.\nIt\'s open source, no internet access, and free.</string>
    <string name="sleep_mode_open_desc">"The screen will not wake between "</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="delay_to_wakeup">Click here to begin wake test</string>
    <string name="click_here_and_press_power_button_within_10_sec">Click here and press power button within 5 seconds</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="dnd_detect_title">Detection of Do Not Disturb</string>
    <string name="dnd_detect_desc">Close it if you want to wake up in DND mode.</string>
    <string name="language_it">Italiano</string>
    <string name="wake_hint_before">The screen will wake</string>
    <string name="seconds">second(s)</string>
    <string name="wake_up_time_limitaon_desc">Notice: \nIn many Devices, this setting will not work properly. \nThis is a limitation by the system.</string>
    <string name="invalid_number">Invalid number</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="still_have_problem">Still having problems? Click here to open setting</string>
    <string name="close_app_notice">This action will close Application, please reopen the APP after that.</string>
    <string name="include_system_app">Include system APP</string>
    <string name="radical_ongoing_detact">Radical Ongoing Detect (unstable)</string>
    <string name="running_to_prevent_kill_app">Service is running</string>
    <string name="show_notification_when_service_start">Show Notification After Service Start(It will take effect after the phone is restarted)</string>
    <string name="send_notification_permission">Permission to send notifications</string>

</resources>
