<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="#fff"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/custom"
                android:textColor="@color/colorPrimary" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_language"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:visibility="visible"
                app:sc_setting_item_title_main="@string/language"
                app:sc_setting_item_title_second="@string/language_zh_cn"
                tools:visibility="visible" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_wake_screen_time"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/time_of_wake_up_screen"
                app:sc_setting_item_title_second="2s" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_current_mode"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/current_mode"
                app:sc_setting_item_title_second="@string/white_list" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_white_list_entry"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:visibility="gone"
                app:sc_setting_item_title_main="@string/white_list"
                app:sc_setting_item_title_second="@string/click_to_enter_white_list_page"
                tools:visibility="gone" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_black_list_entry"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:visibility="gone"
                app:sc_setting_item_title_main="@string/black_list"
                app:sc_setting_item_title_second="@string/click_to_enter_black_list_page"
                tools:visibility="gone" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_advanced_setting"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/advanced_setting"
                app:sc_setting_single_line="true" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="0dp"
                android:text="@string/about"
                android:textColor="@color/colorPrimary" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_about_this"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/app_info"
                app:sc_setting_single_line="true" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_address"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/project_address"
                app:sc_setting_item_title_second="https://github.com/SymeonChen/WakeUpScreen" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_question"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/feedback"
                app:sc_setting_item_title_second="symeonchen@gmail.com" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>