<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:text="@string/info"
                android:textColor="@color/colorPrimary" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_app_introduce"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_item_title_main="@string/app_introduce"
                app:sc_setting_single_line="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:text="@string/debug"
                android:textColor="@color/colorPrimary" />

            <com.symeonchen.uicomponent.views.SCSettingItem
                android:id="@+id/item_setting_debug_delay_to_wake"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:visibility="visible"
                app:sc_setting_item_title_main="@string/delay_to_wakeup"
                app:sc_setting_item_title_second="@string/click_here_and_press_power_button_within_10_sec"
                tools:visibility="visible" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>