<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.DebugPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="center"
            android:src="@drawable/ic_arrow_back_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_setting"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <com.symeonchen.uicomponent.views.SCSettingSwitchItem
                android:id="@+id/item_setting_proximity_detect"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_switch_item_checked="true"
                app:sc_setting_switch_item_title_main="@string/pocket_mode"
                app:sc_setting_switch_item_title_second="@string/already_open" />

            <com.symeonchen.uicomponent.views.SCSettingSwitchItem
                android:id="@+id/item_setting_ongoing_detect"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:sc_setting_switch_item_checked="true"
                app:sc_setting_switch_item_title_main="@string/ongoing_status"
                app:sc_setting_switch_item_title_second="@string/already_open" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>