<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".DebugPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorPrimary"
            android:id="@+id/ll_header"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp">

        <ImageView
                android:id="@+id/iv_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="center"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        <TextView
                android:id="@+id/tv_save"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/save"
                android:paddingEnd="14dp"
                android:paddingStart="0dp"
                android:gravity="center_vertical|end"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="80dp"
                android:layout_height="50dp"/>

        <TextView
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/white_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:id="@+id/tv_log_head_hint"
            app:layout_constraintTop_toBottomOf="@id/ll_header"
            android:text="@string/white_list_hints"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_app_list"
            app:layout_constraintTop_toBottomOf="@id/tv_log_head_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_white_list"
            tools:orientation="vertical"
            tools:layoutManager="LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>